Updating Home page

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>CPAV - Lastra</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -19,17 +20,18 @@
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
-    <title>CPAV - Lastra</title>
   </head>
   <body>
-    <h1>Welcome to CPAV Home AV Design and Installation</h1>
-
-    <p>
-      Browse our projects page, and reach out to us. We are excited to design
-      with you!
-    </p>
-    <div class="d-flex justify-content-center">
-      <i class="fa-solid fa-network-wired"></i>
+    <div class="hero">
+      <h1>Welcome to CPAV Home AV Design and Installation</h1>
+      <h2 class="mb-5">We are glad you are here 👏</h2>
+      <p>
+        Browse our projects page, and reach out to us. We are excited to design
+        with you!
+      </p>
+      <div>
+        <a href="contactpage" class="btn btn-branding">Reach Out</a>
+      </div>
     </div>
   </body>
 </html>
