--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Figtree:wght@300;500;700&family=Mulish:wght@300;500&display=swap"
-      rel="stylesheet"
+      rel="style/portfolio.css"
     />
     <script
       src="https://kit.fontawesome.com/d1bebb6a56.js"
