--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Figtree:wght@300;500;700&family=Mulish:wght@300;500&display=swap"
-      rel="style/portfolio.css"
+      rel="stylesheet"
     />
+    <link rel="stylesheet" href="style/portfolio.css" />
     <script
       src="https://kit.fontawesome.com/d1bebb6a56.js"
       crossorigin="anonymous"
@@ -20,6 +21,11 @@
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div class="hero">
