--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
         with you!
       </p>
       <div>
-        <a href="contactpage" class="btn btn-branding">Reach Out</a>
+        <a href="contactpage" class="btn btn-branding" role="button">
+          Reach Out</a
+        >
       </div>
     </div>
   </body>
