--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
         with you!
       </p>
       <div>
-        <a href="contactpage" class="btn btn-branding" role="button">
+        <a
+          href="contactpage"
+          class="btn btn-branding btn-outline-dark"
+          role="button"
+        >
           Reach Out</a
         >
       </div>
