Add Content and CSS

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="hero">
       <h1>Welcome to CPAV Home AV Design and Installation</h1>
       <h2 class="mb-5">We are glad you are here 👏</h2>
-      <p>
+      <p class="p-hero">
         Browse our projects page, and reach out to us. We are excited to design
         with you!
       </p>
@@ -43,6 +43,39 @@
         >
           Reach Out</a
         >
+      </div>
+    </div>
+    <div class="container">
+      <div class="row justify-content-end">
+        <div class="col mb-5 d-none d-sm-block">
+          <img src="images/AV_Home.jpg" class="img-fluid" alt="Home Theatre" />
+        </div>
+        <div class="col mb-6">
+          <p class="text-center">
+            WE FOCUS ON EARNING AND KEEPING THE TRUST YOU PLACE IN US
+          </p>
+          <div class="project-description">
+            <h2 class="mb-2">Our Journey Together</h2>
+            <p>
+              Trust is the cornerstone of any successful relationship, and we’re
+              committed to earning yours by always delivering stellar
+              installations and quality customer support. We work tirelessly on
+              every project to show why we are the preferred smart home
+              technology and automation professional for luxury homeowners and
+              trade professionals in Asheville to Travelers Rest and beyond.
+            </br>
+          </br>
+              Social Media isn't our thing. Check out our Gallery and Customer
+            Testimonials.
+            </p>
+            <a
+              href="About page"
+              class="btn btn-branding-outline btn-outline-dark"
+              role="button"
+              >About Us</a
+            >
+          </div>
+        </div>
       </div>
     </div>
   </body>
