Added About and styled

--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@
               installations and quality customer support. We work tirelessly on
               every project to show why we are the preferred smart home
               technology and automation professional for luxury homeowners and
-              trade professionals in Asheville to Travelers Rest and beyond.
+              trade professionals in the Bay Area.
             </br>
           </br>
               Social Media isn't our thing. Check out our Gallery and Customer
             Testimonials.
             </p>
             <a
-              href="About page"
+              href="about.html"
               class="btn btn-branding-outline btn-outline-dark"
               role="button"
               >About Us</a
