--- a/about.html
+++ b/about.html
@@ -28,10 +28,10 @@
     ></script>
   </head>
   <body>
-    <div class="about-section container">
+    <div class="content-container container">
       <div class="row">
         <div class="col-md">
-          <div class="about-section-content">
+          <div class="content">
             <h1>Welcome to CPAV Home AV Design and Installation</h1>
             <h2>We are glad you are here 👏</h2>
             <p class="mb-5">
@@ -41,7 +41,7 @@
               to us. We are excited to design with you!
             </p>
             <a
-              href="contactpage"
+              href="work.html"
               class="btn btn-branding btn-outline-dark"
               role="button"
             >
