Updated Contact button on Home page

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </p>
       <div>
         <a
-          href="contactpage"
+          href="contact.html"
           class="btn btn-branding btn-outline-dark"
           role="button"
         >
