--- a/index.html
+++ b/index.html
@@ -28,6 +28,18 @@
     ></script>
   </head>
   <body>
+  <div class="container">
+    <nav class="d-flex justify-content-between">
+  <img src="images/icon.svg" alt="" class="logo d-none d-md-block"/>
+  <img src="images/astro-sm.svg" alt="" class="logo d-block d-md-none"/>
+  <ul>
+    <li class="active"><a href="/">Home</a></li>
+    <li><a href="/about.html">About</a></li>
+    <li><a href="/work.html">Gallery</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul></nav>
+  </div>
+
     <div class="hero">
       <h1>Welcome to CPAV Home AV Design and Installation</h1>
       <h2 class="mb-5">We are glad you are here 👏</h2>
