--- a/work.html
+++ b/work.html
@@ -28,6 +28,17 @@
     ></script>
   </head>
   <body>
+      <div class="container">
+    <nav class="d-flex justify-content-between">
+  <img src="images/icon.svg" alt="" class="logo d-none d-md-block"/>
+  <img src="images/astro-sm.svg" alt="" class="logo d-block d-md-none"/>
+  <ul>
+    <li><a href="/index.html">Home</a></li>
+    <li><a href="/about.html">About</a></li>
+    <li class="active"><a href="/">Gallery</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul></nav>
+  </div>
  <div class="conent-container container">
      <div class="content">
          <h1>CPAV Home AV Design and Installation's Gallery of projects</h1>
