added inquiry and social media icons

--- a/about.html
+++ b/about.html
@@ -33,9 +33,9 @@
         <img src="images/icon.svg" alt="" class="logo d-none d-md-block" />
         <img src="images/astro-sm.svg" alt="" class="logo d-block d-md-none" />
         <ul>
-          <li><a href="/index.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li class="active"><a href="/">About</a></li>
-          <li><a href="/work.html">Gallery</a></li>
+          <li><a href="work.html">Gallery</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
