--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
   <img src="images/astro-sm.svg" alt="" class="logo d-block d-md-none"/>
   <ul>
     <li class="active"><a href="/">Home</a></li>
-    <li><a href="/about.html">About</a></li>
-    <li><a href="/work.html">Gallery</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="work.html">Gallery</a></li>
     <li><a href="contact.html">Contact</a></li>
   </ul></nav>
   </div>
@@ -89,6 +89,25 @@
           </div>
         </div>
       </div>
+      <footer>
+        <div class="contact-box d-flex justify-content-center mb-5 d-none d-md-flex">
+          <div class="project-box">
+            <h4>Project Inquiry</h4>
+            <p class="text-muted">Let's work together</p>
+          </div>
+          <div>
+            <a href="contact.html" class="btn btn-branding btn-outline-dark mt-3">Contact me</a>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mb-5">
+     <a href="mailto:tralastra@gmail.com" class="email-link">cpavlastra@gmai.com</a>
+    </div>
+        <div class="social links d-flex justify-content-center">
+          <a href=""><i class="fa-solid fa-laptop-code"></i></a>
+          <a href=""><i class="fa-solid fa-envelope"></i></a>
+          <a href=""><i class="fa-solid fa-cake-candles"></i></a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
