--- a/work.html
+++ b/work.html
@@ -33,8 +33,8 @@
   <img src="images/icon.svg" alt="" class="logo d-none d-md-block"/>
   <img src="images/astro-sm.svg" alt="" class="logo d-block d-md-none"/>
   <ul>
-    <li><a href="/index.html">Home</a></li>
-    <li><a href="/about.html">About</a></li>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
     <li class="active"><a href="/">Gallery</a></li>
     <li><a href="contact.html">Contact</a></li>
   </ul></nav>
