SEO updates to titles, links, pages

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" cotent="CPAV is ready to help with AV Design and Installation"
     <title>CPAV - Lastra</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -34,9 +35,9 @@
   <img src="images/astro-sm.svg" alt="" class="logo d-block d-md-none"/>
   <ul>
     <li class="active"><a href="/">Home</a></li>
-    <li><a href="about.html">About</a></li>
-    <li><a href="work.html">Gallery</a></li>
-    <li><a href="contact.html">Contact</a></li>
+    <li><a href="about.html" title="CPAV About">About</a></li>
+    <li><a href="work.html" title="CPAV Gallery">Gallery</a></li>
+    <li><a href="contact.html" title="CPAV Contact">Contact</a></li>
   </ul></nav>
   </div>
 
