--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" cotent="CPAV is ready to help with AV Design and Installation"
+    <meta name="description" cotent="CPAV is ready to help with AV Design and Installation"/>
     <title>CPAV - Lastra</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -34,7 +34,7 @@
   <img src="images/icon.svg" alt="" class="logo d-none d-md-block"/>
   <img src="images/astro-sm.svg" alt="" class="logo d-block d-md-none"/>
   <ul>
-    <li class="active"><a href="/">Home</a></li>
+    <li class="active" ><a href="/"title="CPAV Home">Home</a></li>
     <li><a href="about.html" title="CPAV About">About</a></li>
     <li><a href="work.html" title="CPAV Gallery">Gallery</a></li>
     <li><a href="contact.html" title="CPAV Contact">Contact</a></li>
